--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="result"></div>
+    <div id="result2"></div>
+    <div id="result1"></div>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
 </html>
