--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Générateur de citations</title>
 </head>
 <body>
+    <h1>Step 2</h1>
     <div id="result"></div>
     <div id="result2"></div>
     <div id="result1"></div>
