Ajout de la structure d'etapes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Step 2</h1>
+    <label for="nbCitation">Nombre de citation souhaité : </label>
+    <input  type="text" id="nbCitation">
+    <button onclick="Citation.methods.test()">Test</button>
     <div id="result"></div>
-    <div id="result2"></div>
-    <div id="result1"></div>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
 </html>
