--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Step 2</h1>
     <label for="nbCitation">Nombre de citation souhaite : </label>
     <input type="number" id="nbCit" onchange="Citation.methods.init()">
-    <p id="conditions">Condition ?</p>
-    <p id="error"></p>
+    <div id="error"></div> 
+    <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
     <div id="result"></div>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
