-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Step 2</h1>
+    <label for="choixCit">Choisir le type de Citation : </label>
+    <input type="number" id="chCit" onchange="">
     <label for="nbCitation">Nombre de citation souhaite : </label>
     <input type="number" id="nbCit" onchange="Citation.methods.init()">
     <div id="error"></div> 
