--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <h1>Step 2</h1>
-    <label for="choixCit">Choisir le type de Citation : </label>
-    <input type="number" id="chCit" onchange="">
-    
+    <h1>Step 3</h1>
+   
+    <select name="" id="chCit" onchange="Citation.methods.checkvalue()">
+        <option id="default">Choisir le type de Citation :</option>
+        <option id="starwars">starwars</option>
+        <option id="kamelot">kamelot</option>
+    </select>
+
     <label for="nbCitation">Nombre de citation souhaite : </label>
     <input type="number" id="nbCit" onchange="Citation.methods.init()">
     <div id="error"></div> 
