-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <h1>Step 3</h1>
    
-    <select name="" id="chCit" onchange="Citation.methods.checkvalue()">
+    <select name="" id="chCit" onchange="Citation.methods.checkvalue()" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
         <option id="default">Choisir le type de Citation :</option>
         <option id="starwars">starwars</option>
         <option id="kamelot">kamelot</option>
     </select>
 
     <label for="nbCitation">Nombre de citation souhaite : </label>
-    <input type="number" id="nbCit" onchange="Citation.methods.init()">
+    <input type="number" id="nbCit" onchange="Citation.methods.init()" id="TAB2" tabindex="2">
     <div id="error"></div> 
     <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
     <div id="result"></div>
