-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Step 3</h1>
    
     <select name="" id="chCit" onchange="Citation.methods.checkvalue()" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
-        <option id="default">Choisir le type de Citation :</option>
-        <option id="starwars">starwars</option>
-        <option id="kamelot">kamelot</option>
+        <option id="debut">Choisir le type de Citation :</option>
+        <option id="starWars">starwars</option>
+        <option id="kaamelot">kamelot</option>
     </select>
 
     <label for="nbCitation">Nombre de citation souhaite : </label>
