-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Step 3</h1>
    
-    <select name="" id="chCit" onchange="Citation.methods.checkvalue()" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
+    <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
         <option id="debut">Choisir le type de Citation :</option>
         <option id="starWars">starwars</option>
         <option id="kaamelot">kamelot</option>
