--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Step 3</h1>
    
     <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
-        <option id="debut">Choisir le type de Citation :</option>
-        <option id="starWars">starwars</option>
-        <option id="kaamelot">kamelot</option>
+        <option value="default" id="option1">Choisir le type de Citation :</option>
+        <option value="starWars" id="option2">starwars</option>
+        <option value="kaamelot" id="option3">kamelot</option>
     </select>
 
     <label for="nbCitation">Nombre de citation souhaite : </label>
