--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 
 <body>
     <h1>Step 3</h1>
-   
-    <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
+
+    <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1"
+        onkeyup="autoTab(2, this.size, this.value)">
         <option value="default" id="option1">Choisir le type de Citation :</option>
         <option value="starWars" id="option2">starwars</option>
         <option value="kaamelot" id="option3">kamelot</option>
     </select>
 
     <label for="nbCitation">Nombre de citation souhaite : </label>
-    <input type="number" id="nbCit" onchange="Citation.methods.init()" id="TAB2" tabindex="2">
-    <div id="error"></div> 
+    <input type="number" id="nbCit" onchange="Citation.methods.updateNbCit(this.value)" id="TAB2" tabindex="2">
+    <div id="error"></div>
     <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
     <div id="result"></div>
+    <button onclick="Citation.methods.init()">lancement</button>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
 
