-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="error"></div>
     <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
     <div id="result"></div>
-    <button onclick="Citation.methods.init()">lancement</button>
+    <button id="lancement" onclick="Citation.methods.init()">lancement</button>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
 
