-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
-    <h1>Step 3</h1>
-
+    <img src="img/astier.jpg" alt='fond'> </img>
+    <h1>Générateur de citation</h1>
     <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1"
         onkeyup="autoTab(2, this.size, this.value)">
         <option value="default" id="option1">Choisir le type de Citation :</option>
-        <option value="starWars" id="option2">starwars</option>
-        <option value="kaamelot" id="option3">kamelot</option>
+        <option value="kaamelott2" id="option2">kaamelott2</option>
+        <option value="kaamelott" id="option3">kaamelott</option>
     </select>
 
     <label for="nbCitation">Nombre de citation souhaite : </label>
     <input type="number" id="nbCit" onchange="Citation.methods.updateNbCit(this.value)" id="TAB2" tabindex="2">
     <div id="error"></div>
-    <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
+    <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5) <br/>
+    ainsi que de choisir un type de Générateur<br/></p>
     <div id="result"></div>
     <button id="lancement" onclick="Citation.methods.init()">lancement</button>
 
