--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Générateur de citations</title>
+    <title>Générateur de citations kaamelott </title>
+    
 </head>
 
 <body>
-    <img src="img/astier.jpg" alt='fond'> </img>
+        <img src="img/astier.jpg" class="fond"></img>
     <h1>Générateur de citation</h1>
     <select name="" id="chCit" onchange="Citation.methods.checkvalue(this.value)" id="TAB1" tabindex="1"
         onkeyup="autoTab(2, this.size, this.value)">
