-step3-type-citation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="number" id="nbCit" onchange="Citation.methods.updateNbCit(this.value)" id="TAB2" tabindex="2">
     <div class="color" id="error"></div>
     <p class="color" id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5) <br/> ainsi que de choisir un type de Générateur<br/></p>
-    <div class="color" id="result"></div>
+    <ol class="color" id="result"></ol>
     <button id="lancement" onclick="Citation.methods.init()">lancement</button>
 
     <div id="finProgramme" class="confirmationSession hide">
