--- a/Step2/index.html
+++ b/Step2/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1 class="color">Générateur de citation</h1>
-    <select class= "color" name="" id="chCit" onchange="Citation.methods.checkType(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
+    <select name="" id="chCit" onchange="Citation.methods.checkType(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
         <option value="default" id="option1">Choisir le type de Citation :</option>
         <option value="kaamelott2" id="option2">kaamelott2</option>
         <option value="kaamelott" id="option3">kaamelott</option>
