--- a/Step1/index.html
+++ b/Step1/index.html
@@ -10,11 +10,9 @@
 
 <body>
     <h1>Générateur de citation Step 1 </h1>
-    <label for="nbCitation">Nombre de citation souhaite : </label>
-    <input type="number" id="nbCit" onchange="Citation.methods.init()">
     <div id="error"></div> 
-    <p id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5)</p>
-    <ol id="result"></ol>
+    <p id="conditions">Citation : </p>
+    <div id="result"></div>
     <script type="text/javascript" src="./citations.js"></script>
 </body>
 
