--- a/Step2/index.html
+++ b/Step2/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <h1 class="color">Générateur de citation</h1>
-    <select name="" id="chCit" onchange="Citation.methods.checkType(this.value)" id="TAB1" tabindex="1" onkeyup="autoTab(2, this.size, this.value)">
+    <select name="" id="chCit" onchange="Citation.methods.checkType(this.value)">
         <option value="default" id="option1">Choisir le type de Citation :</option>
         <option value="kaamelott2" id="option2">kaamelott2</option>
         <option value="kaamelott" id="option3">kaamelott</option>
     </select>
 
     <label class="color" for="nbCitation">Nombre de citation souhaite : </label>
-    <input type="number" id="nbCit" onchange="Citation.methods.updateNbCit(this.value)" id="TAB2" tabindex="2">
+    <input type="number" id="nbCit" onchange="Citation.methods.updateNbCit(this.value)">
     <div class="color" id="error"></div>
     <p class="color" id="conditions">Conditions : Choisir le nombre de citations générées (de 1 à 5) <br/> ainsi que de choisir un type de Générateur<br/></p>
     <ol class="color" id="result"></ol>
