--- a/Step2/index.html
+++ b/Step2/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body class="">
     <h1 class="color">Générateur de citation</h1>
     <select name="" id="chCit" onchange="Citation.methods.checkType(this.value)">
         <option value="default" id="option1">Choisir le type de Citation :</option>
